# hrm

./: .gitignore
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  .gitignore  DEPLOY-SERVER.md  Dockerfile  HARDENING.md  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.server.yml  docker-compose.yml  nginx.conf  nginx.prod.conf  pyproject.toml
backend/app/: main.py
backend/app/api/: router.py
backend/app/audit/: masking.py  models.py  recorder.py  repository.py  routes.py  schemas.py
backend/app/core/: celery_app.py  config.py  encryption.py  events.py  exceptions.py  logging.py  observability.py  pagination.py  rbac.py  redis.py  security.py  storage.py
backend/app/db/: base.py  registry.py  repository.py  session.py
backend/app/middleware/: rate_limit.py  request_context.py  secure_headers.py
backend/app/modules/approval/: models.py  repository.py  routes.py  schemas.py  service.py
backend/app/modules/attendance/: events.py  models.py  repository.py  routes.py  schemas.py  service.py
backend/app/modules/attendance/adapters/: __init__.py  base.py  factory.py
backend/app/modules/auth/: models.py  repository.py  routes.py  schemas.py  service.py  sso.py
backend/app/modules/employee/: models.py  repository.py  routes.py  schemas.py  service.py
backend/app/modules/payroll/: engine.py  models.py  repository.py  routes.py  schemas.py  service.py
backend/app/modules/payslip/: models.py  repository.py  routes.py  schemas.py  service.py
backend/app/modules/payslip/templates/: payslip.html
backend/app/workers/: _util.py  attendance_tasks.py  email_tasks.py  maintenance_tasks.py  payroll_tasks.py  pdf_tasks.py
backend/deploy/: newhrm.foxai.com.vn.conf
backend/loadtest/: README.md  locustfile.py  seed_payroll.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py  0002_attendance.py  0003_approval.py  0004_payroll.py  0005_payslip.py  0006_sso.py
backend/scripts/: backup.sh  bootstrap.py  create_superuser.py  restore.sh  seed.py  smoke_imports.py  smoke_test.ps1
backend/tests/: conftest.py  test_approval.py  test_attendance.py  test_audit.py  test_auth.py  test_config_guard.py  test_dynamic_fields.py  test_employee.py  test_observability.py  test_payroll.py  test_payroll_engine.py  test_payslip.py  test_security.py  test_sso.py
docs/: 01-kien-truc-tong-quan.md  02a-backend-folder-database.md  02b-backend-security-api.md  03a-module-employee-attendance.md  03b-module-approval-payroll.md  03c-module-payslip-audit.md  04-frontend.md  05-devops.md  06-10-testing-roadmap-cost-risk-tech.md  README.md
frontend/: .dockerignore  .env.local.example  .gitignore  Dockerfile  README.md  next.config.mjs  package-lock.json  package.json
frontend/src/: middleware.ts
frontend/src/app/: layout.tsx
frontend/src/components/: can.tsx  (+2 more)
(+44 files in other folders)
