[project]
name = "hrm-backend"
version = "0.1.0"
description = "HRM in-house backend — FastAPI + PostgreSQL (Clean Architecture / Modular Monolith)"
requires-python = ">=3.12"
dependencies = [
    # web
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "gunicorn>=23.0",
    "python-multipart>=0.0.12",       # form/file upload
    # data / orm
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "psycopg[binary]>=3.2",           # alembic/offline tooling
    # validation / settings
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "email-validator>=2.2",
    # security
    "pyjwt>=2.10",
    "argon2-cffi>=23.1",
    "cryptography>=43.0",
    # cache / queue
    "redis>=5.2",
    "celery>=5.4",
    "celery-redbeat>=2.2",
    "slowapi>=0.1.9",
    # logging
    "structlog>=24.4",
    # payroll / files (used by later modules)
    "simpleeval>=1.0",
    "networkx>=3.4",
    "openpyxl>=3.1",
    # storage + templating
    "boto3>=1.35",
    "jinja2>=3.1",
    # observability
    "prometheus-client>=0.21",
    # outbound HTTP (Microsoft SSO token exchange / JWKS)
    "httpx>=0.27",
]

[project.optional-dependencies]
# Heavy native libs for payslip PDF rendering. Installed in the Docker image
# (needs system pango/cairo + qpdf); kept out of the base install so local dev
# and CI test envs stay light. Imported lazily at runtime.
pdf = [
    "weasyprint>=62",
    "pikepdf>=9",
]
# Error tracking. Installed in production images; optional locally.
observability = [
    "sentry-sdk[fastapi]>=2.18",
]
# Load testing (locust). Install with: pip install ".[loadtest]"
loadtest = [
    "locust>=2.32",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "testcontainers[postgres]>=4.8",
    "factory-boy>=3.3",
    "faker>=30.0",
    "ruff>=0.7",
    "mypy>=1.13",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "S"]
ignore = [
    "S101",   # allow assert in tests
    "B008",   # FastAPI intentionally calls Depends()/require_perm() in arg defaults
    "UP046",  # keep Generic[T] base — guaranteed compatible with pydantic v2 generics
    "UP047",  # keep TypeVar generic functions over PEP 695 syntax
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "B"]
"migrations/*" = ["E501"]
"loadtest/*" = ["S"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
disallow_untyped_defs = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
